<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yoyoanup.rajsthan.chokhidhanimenu">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str1"
        android:layout_marginTop="60dp"
        android:textSize="23sp"
        android:layout_marginLeft="40dp"
        android:id="@+id/textview2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str2"
        android:textSize="23sp"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/bt"
        android:layout_alignStart="@+id/bt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str3"
        android:layout_marginTop="60dp"
        android:textSize="23sp"
        android:layout_marginLeft="280dp"
        android:id="@+id/textView4"
        />

    <CheckBox
        android:id="@+id/c1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str4"
        android:textSize="17sp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et1"
        android:layout_alignBottom="@+id/c1"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str5"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/et1"
        android:layout_marginLeft="290dp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="20dp"
        android:text="@string/str6"
        android:textSize="17sp"
        android:id="@+id/c2"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/c2"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:id="@+id/et2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str7"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/et2"
        android:layout_marginLeft="295dp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="20dp"
        android:text="@string/str8"
        android:textSize="17sp"
        android:id="@+id/c3"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/c3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:id="@+id/et3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str9"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/et3"
        android:layout_marginLeft="295dp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str10"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="220dp"
        android:textSize="17sp"
        android:id="@+id/c4"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/c4"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:id="@+id/et4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str11"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/et4"
        android:layout_marginLeft="295dp"
        android:id="@+id/textView17" />

    <Button
        android:id="@+id/bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/str12"
        android:textSize="14sp" />

</RelativeLayout>
